simple optimization, no functional change